--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.16</version>
+		</dependency>
+
 		 <dependency>
         <groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
