--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.data.mongodb.uri=mongodb+srv://root:ashishmongo123@cluster0.sw3tj.mongodb
 #Security
 spring.security.user.name=ashish
 spring.security.user.password=ashish
+
+
+# Increase max file upload size (e.g., 10MB)
+
